package com.evia.portal.userportal.core.domain.enumeration;

public enum Gender {
  MALE,
  FEMALE,
  OTHER
}
