package com.evia.portal.userportal.core.domain.enumeration;

public enum Grade {
  DR,
  DR_HC,
  DR_EH
}
