package com.evia.portal.userportal.core.domain.enumeration;

public enum RelationshipType {
  MOTHER,
  FATHER,
  KID,
  WIFE,
  HUSBAND,
  DOG,
  CAT
}
